<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeCloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="snackbar_text">Action Sent.</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_intro__name">Intro_Name</string>
    <string name="title_activity_intro__auth">Intro_Auth</string>
    <string name="title_activity_intro__done">Intro_Done</string>
    <string name="title_activity_splash">Garage</string>
    <string name="himain">Hi, </string>
    <string name="greetingmain">Here\'s what I can do for you.</string>
    <string name="garagedoor">Open </string>
    <string name="notavailable">Feature not available yet.</string>
    <string name="startbtn">START</string>
    <string name="nextbtn">NEXT</string>
    <string name="finishbtn">FINISH</string>
    <string name="introtext">Control your house. From anywhere in the world.</string>
    <string name="namehint">Name</string>
    <string name="surnamehint">Surname</string>
    <string name="introname">What\&apos;s your name?</string>
    <string name="introauth">Authenticate to Garage.</string>
    <string name="iphint">IP or Address</string>
    <string name="passhint">Password</string>
    <string name="introdone">All Set!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reset">Reset App</string>
    <string name="usermodify">Modify User Settings</string>
    <string name="servermodify">Modify IP and Password</string>
    <string name="about">About HomeCloud</string>
    <string name="version" translatable="false">7.1.0</string>
    <string name="buildversion" translatable="false">Build 13022017_1</string>
    <string name="title_activity_user__settings">User Settings</string>
    <string name="title_activity_garage__settings">Garage Settings</string>
    <string name="title_activity_about__app">About HomeCloud</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="snackbar_shrug" translatable="false">  ¯ \ _ (ツ) _ / ¯  </string>
    <string name="dialog_reset_title">Reset HomeCloud?</string>
    <string name="dialog_reset_message">If you proceed, you\'ll loose every personalization you\'ve made, and the app will reset.</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="snackbar_egg">Why is 7 afraid of 8? Because 7 8 9!</string>
    <string name="title_activity_name_garage">NameGarage</string>
    <string name="introgaragename">Give your Garage a name.</string>
    <string name="garagenamehint">ex. Joe\'s Garage.</string>
    <string name="garagenamemodify">Modify Garage Name</string>
    <string name="title_activity_garage_name_settings">Garage Name</string>
    <string name="title_activity_intro__athmo">Intro_Athmo</string>
    <string name="yesplease">I\'m in</string>
    <string name="nothanks">Not Yet</string>
    <string name="gotathmo">Got Athmo?</string>
    <string name="athmodesc">Instantly check humidity, themperature, barometric pressure and much more. Effortlessly. Anywhere in the world.</string>
    <string name="title_activity_athmo__wizard__homescreen" translatable="false">Athmo_Wizard_Homescreen</string>
    <string name="introathmoauth">Authenticate to Athmo.</string>
    <string name="athmomodify">Modify Athmo Settings</string>
    <string name="title_athmo_settings">Athmo Settings</string>
    <string name="athmo" translatable="false">Athmo</string>
    <string name="chekcathmo">Check your Athmo (via AthmoCloud)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_quick_open">QuickOpen</string>
    <string name="templink">temperatureen</string>
    <string name="humlink">humidityen</string>
    <string name="dewlink">dewen</string>
    <string name="pressurelink">pressureen</string>
    <string name="iconcredit">Icons by the lovely folks at icons8.com ❤️</string>
    <string name="snackbar_text_nodata">No data was receiven. Are you connected to the internet?</string>
    <string name="snackbar_text_cantsend">Cannot send action to Garage.</string>
    <string name="dialog_reset_athmo">Refresh Athmo?</string>
    <string name="dialog_reset_athmo_message">Sometimes Athmo becomes slow and unresponsive. If that happens, the best solution would be to refresh Athmo.</string>
    <string name="sending_command">Sending Command...</string>
    <string name="command_sent">Command Sent!</string>
    <string name="cant_send_command">Can\'t Send Command.</string>
    <string name="refresh_athmo">Refresh Athmo</string>

    <!-- CONTEXTUAL NOTIFICATIONS STRINGS -->
    <string name="context_notif">Contextual Notifications</string>
    <string name="action_delete_all">Delete All Contextual Notifications</string>

    <!-- Dialogs -->
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No" translatable="false">No</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <!-- Button -->
    <string name="Button.DeleteGeofence">DELETE</string>

    <!-- Labels -->
    <string name="Label.Name">Name</string>
    <string name="Label.Latitude">Latitude</string>
    <string name="Label.Longitude">Longitude</string>
    <string name="Label.Radius">Radius</string>
    <string name="Label.AddGeofence">Add a Contextual Notification</string>
    <string name="Label.EmptyState">You haven\'t created any Contextual Notifications yet. Tap the "+" button to create one.</string>

    <!-- Hints -->
    <string name="Hint.Name">Name</string>
    <string name="Hint.Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
    <string name="Hint.Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
    <string name="Hint.Radius" formatted="false">Radius (%3.2f to %3.1f km, typically 0.1 km)</string>

    <!-- Units -->
    <string name="Units.Degrees" translatable="false">\u00B0</string>
    <string name="Units.Kilometers" translatable="false">km</string>

    <!-- Notification -->
    <string name="Notification.Title" translatable="false">HomeCloud</string>
    <string name="Notification.Text">It looks like you\'re near %1$s.</string>

    <!-- Toast -->
    <string name="Toast.Validation">Please enter valid data for all fields</string>
    <string name="Toast.Error">There was an error. Please try again.</string>

    <string name="newfeature">New in HomeCloud 7.</string>
    <string name="context_intro">Get timely notifications based on your location.</string>
    <string name="context_desc">Have you ever forgot to open your garage and crashed your car into it? Hopefully not, but with the all-new Contextual Notifications you\'ll be able to open your garage right on your wrist or with just one tap. These notifications will appear only when you\'re close to your garage, and won\'t disturb you in other times.</string>
    <string name="context_notyet">You can always configure Contextual Notifications by going in <b>Settings > Contextual Notifications</b>.</string>
    <string name="gotit">Got it.</string>

    <string-array name="settings_list">
        <item>
            Modify User Settings
        </item>
        <item>
            Modify Garage Settings
        </item>
        <item>
            Modify Garage Name
        </item>
        <item>
            Modify Athmo Settings
        </item>
        <item>
            Contextual Notifications
        </item>
        <item>
            Reset App
        </item>
        <item>
            Refresh Athmo
        </item>
        <item>
            About Homecloud
        </item>
    </string-array>

    <string name="uhoh" translatable="false">Uh, Oh!</string>
    <string name="embarrassing">Well, this is embarrassing.</string>
    <string name="errorposition">In order to make Contextual Notifications work, we need access to your location. Please give us permission and try again.</string>
    <string name="givepermission">Give Permission</string>
    <string name="dialog_no_empty">You can\'t leave this field empty! Please input the right data before proceeding</string>
    <string name="quickdiscover">You\'ve Quick Opened your Garage!</string>
    <string name="discover_why">You\'ve just opened or closed your garage with Quick Unlock. It is fast and easy, does not require opening the app and works via NFC, Quick Shortcut, Contextual Notifications and Android Wear.</string>
    <string name="app_settings">Modify App Settings</string>
    <string name="garage_settings">Modify Garage Settings</string>
    <string name="athmo_settings">Modify IP</string>
    <string name="app_sett_desc">Change Name, Reset App...</string>
    <string name="gar_sett_desc">Change Garage Name, IP...</string>
    <string name="ath_sett_desc">Change IP, Refresh Athmo</string>
    <string name="cntx_desc">Add or Remove Locations</string>
    <string name="user_desc">Change your Name and Surname</string>
    <string name="reset_desc">Restore HomeCloud to its factory settings</string>
    <string name="garage_ip_desc">Change your Garage\'s IP and Password</string>
    <string name="garage_name_desc">Change your Garage\'s friendly name</string>
    <string name="athmo_ip_desc">Change your Athmo\'s IP</string>
    <string name="refresh_desc">Restart your Athmo if it isn\'t working properly</string>
    <string name="main_greeting1">Howdy there! Fancy opening yo\' Garage?</string>
    <string name="main_greeting2">Now with more Athmo goodness!</string>
    <string name="main_greeting3">The BatCave wasn\'t this smart.</string>
    <string name="main_greeting4">You can also QuickOpen, y\'know it right?</string>
    <string name="main_greeting5">We meet again,</string>
    <string name="safetywarning">You might put your home at risk.</string>
    <string name="safetywarning_desc">HomeCloud was not installed from a trusted source. This might put your house at risk since the app might have been hacked. If you understand the risks, press the "Got It" button. This warning will be displayed every time you launch this app.</string>
    <string name="latest_measurements">Latest Measurements</string>
    <string name="taken_on">Taken On</string>
    <string name="checkathmodirect">Check your Athmo (via AthmoDirect)</string>
</resources>
