<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nicolagigante.garage.Intro_Athmo"
    android:background="#26c6da">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:text="@string/yesplease"
        android:textSize="15dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:onClick="goToWizard" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view2"
        android:text="@string/nothanks"
        android:textSize="15dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="#ffffff"
        android:onClick="skipWizard" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/imageView"
            android:src="@drawable/intro_athmos_welcome"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gotathmo"
            android:id="@+id/textView9"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/athmodesc"
            android:id="@+id/textView10"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:layout_marginTop="15dp" />

    </LinearLayout>

</RelativeLayout>
