<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nicolagigante.garage.Settings"
    android:id="@+id/activity_settings">


    <android.support.v7.widget.Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarsettings"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="6dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarsettings"
        android:layout_alignLeft="@+id/toolbarsettings"
        android:layout_alignStart="@+id/toolbarsettings">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/view4"
            android:text="@string/usermodify"
            android:textColor="#546e7a"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="goToUser" />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/view5"
            android:text="@string/servermodify"
            android:textColor="#546e7a"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="goToGarage" />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/view6"
            android:text="@string/reset"
            android:textColor="#546e7a"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="goToReset" />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/view7"
            android:text="@string/about"
            android:textColor="#546e7a"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="goToAbout" />
    </LinearLayout>
</RelativeLayout>
