<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008377"
    tools:context="nicolagigante.garage.QuickOpen_Discover">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:text="@string/gotit"
        android:textSize="15sp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:onClick="goBack" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:layout_margin="16dp">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/quickdiscover"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quickdiscover"
            android:id="@+id/textView17"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover_why"
            android:id="@+id/textView18"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>
