<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FirstTime.Intro_Name"
    android:background="#0097a7">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/view2"
            android:hint="@string/namehint"
            android:textColorHint="@color/white"
            android:inputType="textCapWords"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/view3"
            android:hint="@string/surnamehint"
            android:textColorHint="@color/white"
            android:inputType="textCapWords"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/imageView2"
            android:src="@drawable/intro_f_2"
            android:layout_gravity="top|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introname"
            android:id="@+id/textView2"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:layout_marginLeft="15dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:text="@string/nextbtn"
        android:textSize="15dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:onClick="goToAuth" />

</RelativeLayout>
