<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nicolagigante.garage.About_App"
    android:background="@color/primary"
    android:id="@+id/activity_about">

    <android.support.v7.widget.Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarabout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="6dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout4">

        <ImageButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/imageButton2"
            android:background="@drawable/about_drawable"
            android:onClick="easterEgg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:id="@+id/textView3"
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAlignment="center"
            android:id="@+id/textView4"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_margin="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buildversion"
            android:textAlignment="center"
            android:id="@+id/textView5"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:gravity="center" />

    </LinearLayout>


</RelativeLayout>
